# openclaw-health-fitness

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  README.md  SPEC.md  TOOLS.md  agent.py  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
agent_helper/: Dockerfile  pyproject.toml
agent_helper/agent_helper/: __init__.py  cli.py  config.py  dashboard.py  data.py  importers.py  mq.py  reports.py
agent_helper/tests/: test_mq.py
docker-dashboard/: Dockerfile  docker-compose.yml  nginx.conf
docker-dashboard/html/: index.html
spec/: ARCHITECTURE.md  COMMUNICATION.md  DATA_SCHEMA.md  INTEGRATIONS.md  LEARNINGS.md  PIPELINES.md  SAFETY.md  TESTING.md  TROUBLESHOOTING.md
spec/adr/: 001-pipeline-runner-as-separate-module.md  002-steps-as-plain-functions.md  003-declarative-yaml-pipelines.md  004-docker-first-execution.md  005-structured-step-observability.md  README.md
specs/: AGENT_SPEC.md  ARCHITECTURE.md  REPORTING.md
tools/pipeline_runner/: Dockerfile  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  _test_steps.py  errors.py  loader.py  pipeline.py  runner.py  step.py  types.py
tools/pipeline_runner/pipeline_runner/bridges/: __init__.py  health_connect.py
tools/pipeline_runner/pipelines/: health_connect_import.yaml
tools/pipeline_runner/tests/: conftest.py  test_loader.py  test_pipeline.py  test_runner.py  test_step.py  test_types.py
